styling menu with shadow and fixing some alignments

--- a/recipe-book/src/components/Menu.css
+++ b/recipe-book/src/components/Menu.css
@@ -16,6 +16,7 @@
         left: 0;
         /* width: 250px; */
         z-index: var(--z-dropdown);
+        padding: var(--space-xl);
     }
 }
 
